--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ env:
   BACKEND_APP: investflow-backend
   FRONTEND_APP: investflow-frontend
   BACKEND_URL: https://investflow-backend.yellowsky-ca466dfe.eastus.azurecontainerapps.io
+  FRONTEND_URL: https://investflow-frontend.yellowsky-ca466dfe.eastus.azurecontainerapps.io
   LAKEKEEPER_URL: https://investflow-lakekeeper.yellowsky-ca466dfe.eastus.azurecontainerapps.io
 
 jobs:
@@ -58,6 +59,7 @@ jobs:
             --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
             --image ${{ env.ACR_SERVER }}/backend:${{ github.sha }} \
             --set-env-vars \
+              CORS_ORIGINS=${{ env.FRONTEND_URL }} \
               LAKEKEEPER__BASE_URI=${{ env.LAKEKEEPER_URL }} \
               LAKEKEEPER__WAREHOUSE_NAME=lakekeeper
 
